// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Render correct sidebar view 1`] = `
<div>
  <aside
    class="sidebar"
  >
    <h1 />
  </aside>
</div>
`;

exports[`Render correct sidebar view with props 1`] = `
<div>
  <aside
    class="sidebar"
  >
    <h1>
      Hello world
    </h1>
  </aside>
</div>
`;

exports[`Return null if view is disabled 1`] = `<div />`;

exports[`Return null if view is not set 1`] = `<div />`;
